# gst-opencv-simple-example

./: .devcontainer.json  .gitignore  CMakeLists.txt  README.md
dockerfiles/: Dockerfile.dev
src/: Logger.h  Pipeline.cpp  Pipeline.h  main.cpp
